# msysaur

./: msysaur.py  pyproject.toml
aur-build/: msysaur.py
src/msysaur/: __init__.py  msysaur.py
test/: test_dep_resolve.py
