[project]
name = "msysaur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fufu", email = "fufurobot@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest-skip-slow>=0.0.5",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"
